[package]
name = "mdbook-chapter-list"
version = "0.1.0"
authors = ["Brad Campbell <bradjc5@gmail.com>"]
description = "mdbook preprocessor for listing subchapters."
repository = "https://github.com/bradjc/mdbook-chapter-list.git"
keywords = ["mdbook", "markdown"]

edition = "2021"

readme = "README.md"
license = "MIT"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
mdbook = { version = "0.4.36", default-features = false }
semver = "1.0.21"
serde_json = "1.0.111"
pathdiff = "0.1.0"
